--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "lite-server"
   },
-  "author": "",
+  "author": "Michael Slaton",
   "license": "ISC",
   "devDependencies": {
     "lite-server": "^2.6.1"
